# robolab_project

./: .gitignore  README.md
birdView_calibration_v2/: CMakeLists.txt  target.xml
birdView_calibration_v2/include/: DosuBirdView.h
border_height_detect/: CMakeLists.txt  main.cpp  pointcloud.cpp
border_lingang/src/: main.cpp
cloud_convertor/scripts/: m234_car_speed.npy  m234_cb_current.npy  m234_cb_speed.npy  m234_cm7290_current.npy  m234_pf_current.npy  m234_pf_speed.npy  m234_reel_current.npy  m234_reel_speed.npy  m91011_car_speed.npy  m91011_cb_current.npy  m91011_cb_speed.npy  m91011_cm7290_current.npy  m91011_pf_current.npy  m91011_pf_speed.npy  m91011_reel_current.npy  m91011_reel_speed.npy
control485/scripts/: draw_result_2.py  draw_result_3.py  m10_motor_speed.npy  m5_cm7290_current.npy  m5_motor_speed.npy  m9_cm7290_current.npy  m9_motor_speed.npy  print_diagram.py  to_local.py
control485/speed_result/: [2021-1-15 11:35:36:039]test_rms.txt  [2021-1-15 11:40:58:178]test_rms.txt  [2021-1-15 12:5:06:693]test_rms.txt  [2021-1-15 13:57:34:640]m7_3000.txt  [2021-1-15 14:1:27:765]m7_3000.txt  [2021-1-15 14:26:54:005]m1_3000.txt  [2021-1-15 14:38:52:166]m8_3000.txt  [2021-1-15 14:43:29:621]m8_3000.txt  [2021-1-15 14:9:53:562]m7_2000.txt  [2021-1-15 15:13:27:101]m10_500.txt  [2021-1-15 15:13:43:320]m10_500.txt  [2021-1-15 15:15:46:038]m10_500.txt  [2021-1-15 15:16:47:115]m10_500.txt  [2021-1-15 15:16:56:049]m10_500.txt  [2021-1-15 15:17:11:207]m10_500.txt  [2021-1-15 15:17:33:908]m10_500.txt  [2021-1-15 15:17:50:614]m10_500.txt  [2021-1-15 15:20:31:065]m10_500.txt  [2021-1-15 15:24:52:711]m8_500.txt  [2021-1-15 15:3:16:780]m10_500.txt  [2021-1-15 15:3:44:271]m10_500.txt  [2021-1-15 15:4:07:281]m10_500.txt  [2021-1-15 15:6:08:133]m10_500.txt  [2021-1-19 12:52:10:950]m10_1500_torque.txt  [2021-1-19 13:14:36:389]m10_speed.txt  [2021-1-19 13:51:58:933]m10_speed.txt  [2021-1-19 13:57:40:010]m10_2000_torque.txt  [2021-1-19 13:58:45:078]m10_1500_torque.txt  [2021-1-19 13:5:58:010]m10_1500_torque.txt  [2021-1-19 14:4:53:609]m10_1500_speed.txt  m1_test.xlsx  speed_current_plot.py  txt2np.py
control485/src/: change_485_simple_test.cpp  send_fake_speed.cpp
controldis/: CMakeLists.txt
controldis/src/: controldis_gps_node.cpp  controldis_node.cpp
cv_camera/launch/: cv_camera.launch
fakespeed/src/: fakespeed_node.cpp
launch/: milliwave-485-hmi-real.launch  motor_simple_test.launch  path_track.launch  realsense_record.launch
learning_communication/: listener.cpp
loding_detection/: main.cpp
multicamera/: CMakeLists.txt
multicamera/include/: CameraDefine.h
multicamera/src/: main_realtime.cpp
obstacle_detect/: CMakeLists.txt  Readme.md
obstacle_detect/include/obstacle_detect/: obstacle_detecter.h
obstacle_detect/src/: fake_obstacle_node.cpp  obstacle_detect_node.cpp
pcl_test/: CMakeLists.txt
pcl_test/src/: depth_to_cloud.cpp
serialPort/: CMakeLists.txt
talker/: CMakeLists.txt
talker/scripts/: listener.py  (+1 more)
(+23 files in other folders)
